--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 
 <p>This and ideal part to show advance indicators KPI's with porcentual calculation based on a target goal.
 And it's animated!! Cool!</p>
+<div style="text-align: center; margin: 20px; border-style: solid; border-color: #016; border-width:2px;">
+<canvas id="termoh" width="400" height="200" data-valor="85" data-max="100"
+style="background-color:#fff;">
+</canvas>
+<script src="javascripts/termoh.js"></script>
+</div>
 
 <h3>
 <a id="instructions" class="anchor" href="#instructions" aria-hidden="true"><span class="octicon octicon-link"></span></a>Instructions.</h3>
@@ -59,7 +65,7 @@ Be sure the termoh.js file is included in the js folder. But if the javascript i
 
 <p>Please check out the code on <a href="https://github.com/thermo-h/">GitHub</a>.
 You can also visit the web page of <a href="https://Sistemas400.com">Sistemas400</a>.
-For additional request please email to: jorge.girbau@gmail.com.</p>
+For additional request please email to: <a href="emailto:jorge.girbau@gmail.com">jorge.girbau@gmail.com</a>.</p>
 
 <p>Best Regards,
 <a href="https://github.com/jgirbau/">Jorge Girbau</a>. </p>
