--- a/privacy/sharepoint.html
+++ b/privacy/sharepoint.html
@@ -11,7 +11,7 @@
   </p>
   <p style="text-align:justify;">
 	There is not data communication other than passed in parameters like width, height, text and values used to build the
-	indicator. Do not any database or any other data collector.
+	indicator. This component do not connect to any database or any other data collector.
   </p>
   <p style="text-align:justify;">
 	This application do not use cookies and do not save any user data.
