--- a/privacy/sharepoint.html
+++ b/privacy/sharepoint.html
@@ -1,6 +1,12 @@
 <html lang="es">
 <head>
    <title>Termometro Privacy Statement</title>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+   <link rel="stylesheet" href="../stylesheets/stylesheet.css" media="screen">
+   <link rel="stylesheet" href="../stylesheets/github-dark.css">
+
 </head>
 <body style="color:#000000;background-color:#AADDFF;">
   <h1 style="color:#001660;text-align:center;">Termometro Sharepoint WebPart</h1>
