--- a/privacy/index.html
+++ b/privacy/index.html
@@ -1,1 +1,32 @@
-xx
+<html lang="es">
+<head>
+   <title>Termometro Privacy Statement</title>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+   <link rel="stylesheet" href="../stylesheets/stylesheet.css" media="screen">
+   <link rel="stylesheet" href="../stylesheets/github-dark.css">
+
+</head>
+<body style="color:#000000;background-color:#AADDFF;">
+<div class="container">
+  <h1 style="color:#001660;text-align:center;">Termometro Sharepoint WebPart</h1>
+  <h2>Privacy Statement</h2>
+  <p style="text-align:justify;">
+    The &quot;Termometro&quot; Web Part for Sharepoint, do not collect any user information. It's just a visual web part
+	that show a graphic component.
+  </p>
+  <p style="text-align:justify;">
+	There is not data communication other than passed in parameters like width, height, text and values used to build the
+	indicator. This component do not connect to any database or any other data collector.
+  </p>
+  <p style="text-align:justify;">
+	This application do not use cookies and do not save any user data.
+  </p>
+  <p style="text-align:justify;">
+	For detalied explanation you can contact the provider:
+	<a href="mailto:jorge.girbau@gmail.com">jorge.girbau@gmail.com</a>
+  </p>
+</div>
+</body>
+</html>
