--- a/privacy/index.html
+++ b/privacy/index.html
@@ -10,6 +10,7 @@
 </head>
 <body style="color:#000000;background-color:#AADDFF;">
 <div class="container">
+<article>
   <h1 style="color:#001660;text-align:center;">Termometro Sharepoint WebPart</h1>
   <h2>Privacy Statement</h2>
   <p style="text-align:justify;">
@@ -27,6 +28,7 @@
 	For detalied explanation you can contact the provider:
 	<a href="mailto:jorge.girbau@gmail.com">jorge.girbau@gmail.com</a>
   </p>
+</article>
 </div>
 </body>
 </html>
