--- a/privacy/index.html
+++ b/privacy/index.html
@@ -10,7 +10,7 @@
 </head>
 <body style="color:#000000;background-color:#AADDFF;">
 <div class="container">
-<article>
+<article class="markdown-body">
   <h1 style="color:#001660;text-align:center;">Termometro Sharepoint WebPart</h1>
   <h2>Privacy Statement</h2>
   <p style="text-align:justify;">
