--- a/privacy/index.html
+++ b/privacy/index.html
@@ -8,9 +8,9 @@
    <link rel="stylesheet" href="../stylesheets/github-dark.css">
 
 </head>
-<body style="color:#000000;background-color:#AADDFF;">
+<body style="color:#000000;background-color:#CCEEFF;">
 <div class="container">
-<article class="markdown-body">
+<article style="width:80%;" class="markdown-body">
   <h1 style="color:#001660;text-align:center;">Termometro Sharepoint WebPart</h1>
   <h2>Privacy Statement</h2>
   <p style="text-align:justify;">
