--- a/privacy/index.html
+++ b/privacy/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body style="color:#000000;background-color:#CCEEFF;">
-<div class="container">
+<div style="text-align:center;" class="container">
 <article style="width:80%;background-color:#FFFFFF;" class="markdown-body">
   <h1 style="color:#001660;text-align:center;">Termometro Sharepoint WebPart</h1>
   <h2>Privacy Statement</h2>
