--- a/privacy/index.html
+++ b/privacy/index.html
@@ -10,7 +10,7 @@
 </head>
 <body style="color:#000000;background-color:#CCEEFF;">
 <div class="container">
-<article style="margin:0,20%,20%,0;background-color:#FFFFFF;" class="markdown-body">
+<article style="margin-top:0;margin-left:20%;margin-right:20%;margin-bottom:0;background-color:#FFFFFF;" class="markdown-body">
   <h1 style="color:#001660;text-align:center;">Termometro Sharepoint WebPart</h1>
   <h2>Privacy Statement</h2>
   <p style="text-align:justify;">
