--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ Be sure the termoh.js file is included in the js folder. But if the javascript i
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact.</h3>
 
-<p>Please check out the code on <a href="https://github.com/thermo-h/">GitHub</a>.
+<p>Please check out the code on <a href="https://github.com/jgirbau/thermo-h/">GitHub</a>.
 You can also visit the web page of <a href="https://Sistemas400.com">Sistemas400</a>.
 For additional request please email to: <a href="emailto:jorge.girbau@gmail.com">jorge.girbau@gmail.com</a>.</p>
 
